# rxn_location

./: README.md  pyproject.toml
codes/: jet_reversal_check.py  jet_reversal_check_function.py  rc_stats.py  rc_stats_fncs.py  rx_code.py  rx_model_funcs.py  seaborn_plots.py  seaborn_plots_fncs.py
data/: .~lock.mms_magnetopause_crossings.csv#  mms_jet_reversal_times_list_20230721_brst.csv
data/rx_d/: reconnection_line_data_mms3_20230721_msh.csv
